--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,19 +20,43 @@
     <![endif]-->
   </head>
   <body>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+    </style>
+</head>
+<div class="bio_window">
+    <img src="{{ profile['image'] }}" alt="Profile Image" class="profile-image">
+    <div class="profile-info">
+        <div class="profile-name">{{ profile['name'] }}</div>
+        <div class="profile-planet">{{ profile['planet'] }}</div>
+        <div class="profile-age">{{ profile['age'] }}</div>
+        <div class="profile-bio">{{ profile['bio'] }}</div>
+        <div class="profile-interests">
+            <h3>Interests</h3>
+            <ul>
+                {% for interest in profile['interests'] %}
+                <li>{{ interest }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 
-
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
 <div class="chat_window">
-    <div class="top_menu">
-        <div class="buttons">
-            <div class="button close"></div>
-            <div class="button minimize"></div>
-            <div class="button maximize"></div>
-        </div>
-        <div class="title">Chat</div>
-    </div>
     <ul class="messages"></ul>
     <div class="bottom_wrapper clearfix">
         <div class="message_input_wrapper">
@@ -54,82 +78,67 @@
 </div>
 
 
-
-
-
-
-
-      
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-
-    <script>
-        (function () {
-    var Message;
-    Message = function (arg) {
-        this.text = arg.text, this.message_side = arg.message_side;
-        this.draw = function (_this) {
-            return function () {
-                var $message;
-                $message = $($('.message_template').clone().html());
-                $message.addClass(_this.message_side).find('.text').html(_this.text);
-                $('.messages').append($message);
-                return setTimeout(function () {
-                    return $message.addClass('appeared');
-                }, 0);
-            };
-        }(this);
-        return this;
+<script>
+    (function () {
+var Message;
+Message = function (arg) {
+    this.text = arg.text, this.message_side = arg.message_side;
+    this.draw = function (_this) {
+        return function () {
+            var $message;
+            $message = $($('.message_template').clone().html());
+            $message.addClass(_this.message_side).find('.text').html(_this.text);
+            $('.messages').append($message);
+            return setTimeout(function () {
+                return $message.addClass('appeared');
+            }, 0);
+        };
+    }(this);
+    return this;
+};
+$(function () {
+    var getMessageText, message_side, sendMessage;
+    message_side = 'right';
+    getMessageText = function () {
+        var $message_input;
+        $message_input = $('.message_input');
+        return $message_input.val();
     };
-    $(function () {
-        var getMessageText, message_side, sendMessage;
-        message_side = 'right';
-        getMessageText = function () {
-            var $message_input;
-            $message_input = $('.message_input');
-            return $message_input.val();
-        };
-        sendMessage = function (text) {
-            var $messages, message;
-            if (text.trim() === '') {
-                return;
-            }
-            $('.message_input').val('');
-            $messages = $('.messages');
-            message_side = message_side === 'left' ? 'right' : 'left';
-            message = new Message({
-                text: text,
-                message_side: message_side
-            });
-            $.ajax({ 
-                url: '/process', 
-                type: 'POST', 
-                data: { 'data': message }, 
-                success: function(response) { 
-                    document.getElementById('output').innerHTML = response; 
-                }, 
-                error: function(error) { 
-                    console.log(error); 
-                } 
-            }); 
-            message.draw();
-            return $messages.animate({ scrollTop: $messages.prop('scrollHeight') }, 300);
-        };
-        $('.send_message').click(function (e) {
-            return sendMessage(getMessageText());
+    sendMessage = function (text) {
+        var $messages, message;
+        if (text.trim() === '') {
+            return;
+        }
+        $('.message_input').val('');
+        $messages = $('.messages');
+        message_side = message_side === 'left' ? 'right' : 'left';
+        message = new Message({
+            text: text,
+            message_side: message_side
         });
-        $('.message_input').keyup(function (e) {
-            if (e.which === 13) {
-                return sendMessage(getMessageText());
+        $.ajax({ 
+            url: '/process', 
+            type: 'POST', 
+            data: { 'data': message }, 
+            success: function(response) { 
+                document.getElementById('output').innerHTML = response; 
+            }, 
+            error: function(error) { 
+                console.log(error); 
             }
         });
+        message.draw();
+        return $messages.animate({ scrollTop: $messages.prop('scrollHeight') }, 300);
+    };
+    $('.send_message').click(function (e) {
+        return sendMessage(getMessageText());
     });
+    $('.message_input').keyup(function (e) {
+        if (e.which === 13) {
+            return sendMessage(getMessageText());
+        }
+    });
+});
 }.call(this));
-    </script>
-  </body>
+</script>
 </html>
